--- a/gae/static/style.css
+++ b/gae/static/style.css
@@ -120,8 +120,7 @@ button#more {
     outline: none;
 }
 
-button#more:active {
-    background-color: #F44336;
+button#more.loading {
     -webkit-animation-name: spin;
     -webkit-animation-duration: 5s;
     -webkit-animation-iteration-count: infinite;
