--- a/gae/static/style.css
+++ b/gae/static/style.css
@@ -122,12 +122,14 @@ button#more {
 
 button#more.loading {
     -webkit-animation-name: spin;
-    -webkit-animation-duration: 5s;
+    -webkit-animation-duration: 7s;
+    -webkit-animation-timing-function: ease-out;
     -webkit-animation-iteration-count: infinite;
 }
 
 @-webkit-keyframes spin {
   0% { -webkit-transform: rotate( 0deg ); }
+  50% { -webkit-transform: rotate( 360deg ); }
   100% { -webkit-transform: rotate( 360deg ); }
 }
 
